Refactor & Update JSON fields